# password-security-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dast.yml
.github/workflows/: dast.yml  main.yml  sonarqube.yml
ci-cd/: github-actions.yml
docs/: authentication.md  index.md  password_analysis_engine.md  usage.md
src/password_security_tool/: __init__.py  auth.py  cli.py  core.py  web.py
src/password_security_tool/static/: style.css
src/password_security_tool/templates/: admin.html  analyze.html  base.html  breach.html  dashboard.html  generate.html  login.html  profile.html  signup.html  verify_otp.html
tests/: test_auth.py  test_core.py  test_web.py
