[project]
name = "password-security-tool"
version = "0.1.0"
description = "A password strength checker and secure password manager demonstrating RBAC, 2FA, hashing, and breach checks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "bcrypt>=4.0.0",
    "argon2-cffi>=23.0.0",
    "requests>=2.30.0",
    "pyotp>=2.8.0",
    "Flask>=3.0.0"
]

[project.urls]
"Source" = "https://github.com/prakyushtdr2013-arch/password-security-tool"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"