[metadata]
name = password-security-tool
version = 0.1.0
description = A password strength checker and secure password manager with RBAC, 2FA, hashing, and breach checks.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    bcrypt>=4.0.0
    argon2-cffi>=23.0.0
    requests>=2.30.0
    pyotp>=2.8.0
    Flask>=3.0.0
python_requires = >=3.10

[options.packages.find]
where = src
